[gd_scene load_steps=4 format=3 uid="uid://bv0s3kaoblaex"]

[ext_resource type="Script" uid="uid://dgx645jrd3ttv" path="res://scripts/mensage_box.gd" id="1_crar8"]
[ext_resource type="Texture2D" uid="uid://b4o86nnel66h0" path="res://assets/Mini FX, Items & UI/Mini UI/Dialog_Box(16 x 16).png" id="1_onrrp"]
[ext_resource type="FontFile" uid="uid://jjwyuryfwo6f" path="res://assets/RevMiniPixel.ttf" id="2_crar8"]

[node name="mensage_box" type="MarginContainer"]
offset_right = 64.0
offset_bottom = 32.0
script = ExtResource("1_crar8")

[node name="background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_onrrp")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="label_margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="mensage_label" type="Label" parent="label_margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.813258, 0.813258, 0.813258, 1)
theme_override_fonts/font = ExtResource("2_crar8")
theme_override_font_sizes/font_size = 8
vertical_alignment = 1

[node name="letter_timer_display" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="letter_timer_display" to="." method="_on_letter_timer_display_timeout"]
